# can-I-run

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/can_i_run/: __init__.py  efficiency.py  fix_data.py  generate.py  kv_cache.py  models.py  pareto.py  performance.py  quality.py  vram.py
data/: gpus.json  models.json  pyproject.toml  quantizations.json
data/reference/: OriginalPrompt.md  about.md
data/reference/ui/: artifact.tsx
data/scripts/: __init__.py  __main__.py  manual_mappings.py  model_card_benchmarks.py  update_gpus.py  update_models.py  update_quants.py
data/scripts/common/: __init__.py  apple_gpus.py  gpu_age_filter.py  http.py  pydantic_models.py
data/scripts/tests/: __init__.py  test_gpu_filter.py  test_pydantic_models.py  test_update_gpus.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: About.tsx  ContextSlider.tsx  DomainFilter.tsx  DualRangeSlider.tsx  GPUSelector.tsx  HowItWorks.tsx  LinkedCharts.tsx  MarkdownComponents.tsx  ModelCard.tsx  ParetoChart.tsx  VRAMBreakdown.tsx
frontend/src/content/: about.md
frontend/src/data/: computed.json
frontend/src/hooks/: useLinkedHighlight.ts
frontend/src/lib/: calculations.ts  types.ts
reference/: LLM_Quant.md
