[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "can-i-run"
version = "0.1.0"
description = "GPU-to-Model Pareto Selector - Calculate optimal LLM configurations for your GPU"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
generate-data = "can_i_run.generate:main"

[tool.setuptools.packages.find]
where = ["."]
