[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "can-i-run-data"
version = "0.1.0"
description = "Data update scripts for can-I-run project"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "pandas>=2.0",
    "pyarrow>=14.0",  # For reading parquet files
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
